--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,9 @@ rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
   verbs: ["get", "list", "patch", "update"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -77,3 +80,4 @@ spec:
       port: 80
       targetPort: 8080
   type: ClusterIP
+
