--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -17,7 +17,7 @@ rules:
   verbs: ["get", "list", "patch", "update"]
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["get", "list"]
+  verbs: ["list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
