update deployment to have non-latest version

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -54,7 +54,7 @@ spec:
       serviceAccountName: upkube-sa
       containers:
       - name: upkube
-        image: ghcr.io/kunalsin9h/upkube:latest
+        image: ghcr.io/kunalsin9h/upkube:1.1.0
         ports:
         - containerPort: 8080
         env:
